# website-with-authorization

./: .gitignore  Makefile  README.md  pyproject.toml
website/: __init__.py  auth.py  views.py
website/templates/: base.html  home.html  login.html  sign_up.html
